[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Emile Dimas <emiled16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiosqlite = "^0.22.1"
sqlalchemy = "^2.0.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
